--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=0.5, minimum-scale=0.5, maximum-scale=1.0" />
 <title>Sublime Text | Periodic table of the Keyboard Shortcuts.</title>
 <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-<link href='http://fonts.googleapis.com/css?family=Chivo' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=Chivo' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="css/periodictable.css" />
 <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+<script src="//code.jquery.com/jquery-1.8.3.min.js"></script>
 <script src="js/sublimetext.js"></script>
 </head>
 <body>
 
 	<header class="masthead">
-		<p class="title">WAKAMSHA</p>
+		<p class="title">Sublime Text Cheat Sheet</p>
 	</header>
 	<div class="container">
 		<header class="content-header">
@@ -25,9 +25,9 @@
 			<p class="title">Periodic table of the Keyboard Shortcuts.</p>
 			<img class="title-logo" src="css/img/title-logo.png" height="auto" width="400" alt="Sublime Text |Periodic table of the Keyboard Shortcuts. ">
 			<ul id="osBtnGroup" class="btn-group clearfix">
-				<li class="active"><a href="#" data-os="mac"><img src="css/img/apple.png" height="180" width="32" title="for OS X"></a></li>
+				<li><a href="#" data-os="mac"><img src="css/img/apple.png" height="180" width="32" title="for OS X"></a></li>
 				<li class="v-divider"></li>
-				<li><a href="#" data-os="win"><img src="css/img/Windows8.png" height="32" width="32" title="for Windows"></a></li>
+				<li class="active"><a href="#" data-os="win"><img src="css/img/Windows8.png" height="32" width="32" title="for Windows"></a></li>
 			</ul>
 		</header>
 
