--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
 <link href='//fonts.googleapis.com/css?family=Chivo' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="css/periodictable.css" />
-<!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+<!--[if lt IE 9]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 <script src="//code.jquery.com/jquery-1.8.3.min.js"></script>
 <script src="js/sublimetext.js"></script>
 </head>
